--- a/spotify-clone/styles.css
+++ b/spotify-clone/styles.css
@@ -1,15 +1,9 @@
 @tailwind base;
-
 @tailwind components;
-
 @tailwind utilities;
 
 @layer components {
-    .btn-blu {
-        @apply bg-blue-400 mr-3 text-white py-2 px-4 rounded;
-    }
-
-    .btn-blu:hover {
-        @apply bg-blue-700;
-    }
+  .btn-blue {
+    @apply py-2 px-4 bg-blue-500 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75;
+  }
 }
