--- a/amazon-clone/stylec.css
+++ b/amazon-clone/stylec.css
@@ -1,3 +1,11 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+.item-nav-mid {
+    @apply mr-4 border-transparent rounded-sm px-2 py-1;
+}
+
+.item-nav-mid:hover {
+    @apply hover:border-white
+}
